# Quant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fix-gstack-skills.ps1  pyproject.toml  start_api.bat
.clinerules/: ponytail.md
.cursor/rules/: ponytail.md
.github/workflows/: ci.yml
.hermes/plans/: 2026-06-21-optimization-plan.md
apps/api/: main.py
apps/web/: .env.local.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/worker/: __init__.py  sync_stocks.py
backend/app/: __init__.py  main.py
backend/worker/: __init__.py  sync_stocks.py
docs/: INDEX.md
docs/.obsidian/: workspace.json
docs/architecture/: ARCHITECTURE.md  api-catalog.md  data-model.md  dataset-version-snapshot-design.md  local-a-share-daily-database-design.md  project-structure.md  stock-data-system-design.md  stock-database-workbench.md  system-overview.md
docs/data/: data-source-and-sync-governance.md  lifecycle.md
docs/decisions/: ADR-001-raw-artifacts-and-offline-replay.md
docs/mockups/: database-system-layout-options.html
docs/operations/: development-runbook.md
docs/overview/: glossary.md  project-overview.md
frontend/: package-lock.json  package.json  vite.config.ts
quant/: .env.example  .gitignore  README.md  docker-compose.yml  requirements.txt
scripts/: backfill_adjust_types.py  data_loader.py  quant-dev.cmd  quant-dev.ps1  quant-gui.cmd  quant-gui.py  run_api_server.py  start-dev-bg.ps1  start-dev.cmd  start-dev.ps1  sync_industry.py
(+356 files in other folders)
